--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "bootstrap": "^3.3.7",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "jquery": "^3.2.1",
+    "jqueryui": "^1.11.1",
     "mongoose": "^4.11.1",
+    "multer": "^1.3.0",
     "q": "^1.5.0"
   },
   "devDependencies": {},
